--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -89,4 +89,8 @@ Create a database and manage it in few clicks. <br>Create an API in your languag
        </div>
    </div>
 </div>
+         <h1>
+{{with site.GetPage "post/this-is-my-website}} {{.Content}} {{end}}
+                  </h1>
 </html>
+
