--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -18,7 +18,7 @@
   })();
 </script>
 <!-- End Matomo Code -->
-/head> 
+</head> 
 <div class="container-fluid">
    <div class="row">
        <div class="col-md-2 col-sm-12 col-xs-12">
