--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -3,22 +3,23 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <!--provides a full-width container that can expand or collapse based on the size of viewport-->
-         <head><!-- Matomo -->
+         <head>
+<!-- Matomo -->
 <script>
   var _paq = window._paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//172.17.0.3/";
+    var u="//0.0.0.0:8080/";
     _paq.push(['setTrackerUrl', u+'matomo.php']);
     _paq.push(['setSiteId', '1']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<!-- End Matomo Code -->
-</head> 
+<!-- End Matomo Code --> 
+         </head> 
 <div class="container-fluid">
    <div class="row">
        <div class="col-md-2 col-sm-12 col-xs-12">
