--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -11,15 +11,14 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="https://imaginativepeony8ce3d4netlifyapp.matomo.cloud/";
+    var u="https://imaginative-peony-8ce3d4.netlify.app;
     _paq.push(['setTrackerUrl', u+'matomo.php']);
     _paq.push(['setSiteId', '1']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.async=true; g.src='//cdn.matomo.cloud/imaginativepeony8ce3d4netlifyapp.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<!-- End Matomo Code -->
-         </head> 
+<!-- End Matomo Code -->         </head> 
 <div class="container-fluid">
    <div class="row">
        <div class="col-md-2 col-sm-12 col-xs-12">
